My controls and such

--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
 	    <canvas id="canvas" width="310" height="550" style="z-index: 1;"> Get Chrome </canvas>
 	  	
 	    <div class='panel panel-default' id="controls">
-	    <h5 style="margin:auto;"> <strong><a href="https://github.com/SethPipho/TetrisJS">  Github Repo</a> </strong></h5>
+	    <h5 style="margin:auto;"> <strong><a href="https://github.com/sammymax/TetrisJS">  Github Repo</a> </strong></h5>
 	        <h5> <strong>Controls:</strong> </h5>
 	        <h6> 
 	        	 <strong>
-	        	 	&nbsp &nbsp &#8679; Rotate 
+	        	 	&nbsp &nbsp &#8679; Hard Drop 
 	        		&nbsp &nbsp &#8678;&#8680; Shift 
 	        		&nbsp &nbsp &#8681; Soft Drop 
-	        	    &nbsp &nbsp <kbd>Space</kbd> Hard Drop
+	        	    &nbsp &nbsp <kbd>a</kbd> Rotate CCW
+					&nbsp &nbsp <kbd>s</kbd> Rotate CW
+					&nbsp &nbsp <kbd>d</kbd> Rotate 180
 	        	</strong>  
 	        	  </h6>
 	    </div>
